@@ -5,6 +5,7 @@
 * Authorize.Net: Add authorization_code to response params [noahlh]
 * Make Rails 4 a supported version [sanemat]
 * CyberSource: Add pinless debit card support [JoshMcKin]
+* Verkkomaksut: Add item title field [kaapa]
 
 == Version 1.34.1 (June 28, 2013)
 
